[gd_scene load_steps=7 format=3 uid="uid://bxbk1gfxxe2sq"]

[ext_resource type="Script" path="res://scripts/transitions/Fade_ProgressBar_P2C.gd" id="1_pponq"]

[sub_resource type="Animation" id="Animation_4lyve"]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kjdiv"]
_data = {
"fade": SubResource("Animation_4lyve")
}

[sub_resource type="Animation" id="Animation_ngjvx"]
resource_name = "fade_out'"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_4ad1s"]
resource_name = "text_pulse"
length = 2.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.439216), Color(1, 1, 1, 1), Color(1, 1, 1, 0.439216)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dc78x"]
_data = {
"fade_out": SubResource("Animation_ngjvx"),
"text_pulse": SubResource("Animation_4ad1s")
}

[node name="FadeProgressBar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pponq")
HOLD_FADE_IN = true
ONLY_LOAD_WHEN_FULLY_OUT = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
custom_minimum_size = Vector2(180, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = 33.0
offset_right = 90.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
value = 50.0

[node name="LoadingLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -11.5
offset_right = 31.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Loading..."

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kjdiv")
}

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 232.0
offset_top = 302.0
offset_right = 957.0
offset_bottom = 369.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
text = "PRESS ANY KEY TO CONTINUE..."

[node name="AP_TextPulse" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dc78x")
}

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
